# PicoOS

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
src/: config.c  config.h  home.c  home.h  main.c  util.c  util.h
